--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
     
 </body>
 <script>
+    function computerPlay () {
+     switch(Math.floor(Math.random()*3)) {
+      case 0:
+        return 'rock';
+        break;
+      case 1:
+        return 'scissors';
+        break;
+      case 2:
+        return 'paper';
+  	};
+    }
+
+    function playRound (playerSelection, computerSelection) {
+        playerSelection = playerSelection.toLowerCase();
+        if (playerSelection === computerSelection) {
+            return 'It\'s a tie!';
+        } else if (playerSelection === 'rock' & computerSelection === 'paper') {
+            return 'You lose! Paper beats Rock!';
+        } else if (playerSelection === 'rock' & computerSelection === 'scissors') {
+            return 'You win! Rock beats Scissors!';
+        } else if (playerSelection === 'paper' & computerSelection === 'scissors') {
+            return 'You lose! Scissors beats Paper!';
+        } else if (playerSelection === 'paper' & computerSelection === 'rock') {
+            return 'You win! Paper beats Rock!';
+        } else if (playerSelection === 'scissors' & computerSelection === 'rock') {
+            return 'You lose! Rock beats Scissors!';
+        } else if (playerSelection === 'scissors' & computerSelection === 'paper') {
+            return "You win! Scissors beats Paper!";
+        }
+    }
+
+    const playerSelection = 'rock'
+const computerSelection = computerPlay()
+console.log(playRound(playerSelection, computerSelection));
     
 </script>
 </html>
