--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
 </body>
 <script>
+
+    // This allows the computer to pick 'rock', 'paper', or 'scissors'
     function computerPlay () {
      switch(Math.floor(Math.random()*3)) {
       case 0:
@@ -22,6 +24,8 @@
   	};
     }
 
+    // This puts playerSelection in lower case, compares the two hands, 
+    // and tells the player who won the round
     function playRound (playerSelection, computerSelection) {
         playerSelection = playerSelection.toLowerCase();
         if (playerSelection === computerSelection) {
@@ -37,13 +41,52 @@
         } else if (playerSelection === 'scissors' & computerSelection === 'rock') {
             return 'You lose! Rock beats Scissors!';
         } else if (playerSelection === 'scissors' & computerSelection === 'paper') {
-            return "You win! Scissors beats Paper!";
+            return 'You win! Scissors beats Paper!';
+        } else {
+            return "Pick either paper, rock, or scissors!";
         }
     }
-
-    const playerSelection = 'rock'
-const computerSelection = computerPlay()
-console.log(playRound(playerSelection, computerSelection));
     
-</script>
+    // These variables at the global level are used to store the score of
+    // the player and the computer
+    let playerScore = 0;
+    let computerScore = 0;
+ 
+    // This function is using a loop. The loop runs 5 times and first shows a prompt for the player's input(playerSelection), then
+    //runs the computerSelection, then console.logs playRound, and then uses if/else statements to compare the hands
+    // and update the score of the player and computer. Once the loop ends, it runs another series of if/else statements
+    // that check who has the highest score, alert the winner and the points, and finally reset the score
+    function game () {
+        for (let i = 0; i < 5; i++) {
+            let playerSelection = window.prompt();
+            let computerSelection = computerPlay ();
+            console.log(playRound(playerSelection, computerSelection));
+            if (playerSelection === 'rock' & computerSelection === 'paper') {
+                computerScore = ++computerScore;
+            } else if (playerSelection === 'rock' & computerSelection === 'scissors') {
+                playerScore = ++playerScore;
+            } else if (playerSelection === 'paper' & computerSelection === 'scissors') {
+                computerScore = ++computerScore;
+            } else if (playerSelection === 'paper' & computerSelection === 'rock') {
+                playerScore = ++playerScore;
+            } else if (playerSelection === 'scissors' & computerSelection === 'rock') {
+                computerScore = ++computerScore;
+            } else if (playerSelection === 'scissors' & computerSelection === 'paper') {
+                playerScore = ++playerScore;
+                }
+        } if (computerScore > playerScore) {
+            alert('Computer wins! It has ' + computerScore + ' points and you have ' + playerScore + ' points');
+            playerScore = 0;
+            computerScore = 0;
+        } else if (computerScore < playerScore) {
+            alert('You win! You have ' + playerScore + ' points and the computer has ' + computerScore + ' points');
+            playerScore = 0;
+            computerScore = 0;
+        } else {
+            alert('It\'s a draw! You have ' + playerScore + ' points and the computer has ' + computerScore + ' points');
+            playerScore = 0;
+            computerScore = 0;
+        }
+    }
+    </script>
 </html>
